syntax = "proto3";

package sole.api.v1.viper.webserver;
import "google/protobuf/duration.proto";

option go_package = "github.com/searKing/sole/pkg/webserver;webserver";

message Web {
  Net bind_addr = 1; // for listen
  Net advertise_addr = 2; // for expose
  TLS tls = 3; // for tls such as https
  CORS cors = 4; // for cors

  // for debug
  bool force_disable_tls = 5; // disable tls

  LocalIpResolver local_ip_resolver = 6; // for resolve local ip to expose, used if advertise_addr is empty

  bool no_grpc_gateway_proxy = 7; // disable http proxy for grpc_gateway client

  message Net {
    string host = 1;
    repeated string domains = 2;// service name to register to consul for dns
    int32 port = 3;
  }

  message LocalIpResolver {
    repeated string networks = 1;
    repeated string addresses = 2;
    google.protobuf.Duration timeout = 3;
  }

  message TLS {
    bool enable = 1;
    KeyPair key_pair_base64 = 2; // key pair in base64 format encoded from pem
    KeyPair key_pair_path = 3; // key pair stored in file from pem
    // service_name is used to verify the hostname on the returned
    // certificates unless InsecureSkipVerify is given. It is also included
    // in the client's handshake to support virtual hosting unless it is
    // an IP address.
    string service_name = 4;


    repeated string allowed_tls_cidrs = 5; //"127.0.0.1/24"
    repeated string whitelisted_paths = 6;
    // a public/private key pair
    message KeyPair {
      string cert = 1; // public key
      string key = 2; // private key
    }
  }

  message CORS {
    bool enable = 1;
    // returns Access-Control-Allow-Origin: * if false
    bool use_conditional = 2;

    // Conditional Cors bellow

    // allowed_origins is a list of origins a cross-domain request can be executed from.
    // If the special "*" value is present in the list, all origins will be allowed.
    // An origin may contain a wildcard (*) to replace 0 or more characters
    // (i.e.: http://*.domain.com). Usage of wildcards implies a small performance penalty.
    // Only one wildcard can be used per origin.
    // Default value is ["*"]
    // return Access-Control-Allow-Origin
    repeated string allowed_origins = 3;
    // allowed_methods is a list of methods the client is allowed to use with
    // cross-domain requests. Default value is simple methods (HEAD, GET and POST).
    repeated string allowed_methods = 4;
    // allowed_headers is list of non simple headers the client is allowed to use with
    // cross-domain requests.
    // If the special "*" value is present in the list, all headers will be allowed.
    // Default value is [] but "Origin" is always appended to the list.
    repeated string allowed_headers = 5;
    // exposed_headers indicates which headers are safe to expose to the API of a CORS
    // API specification
    // return Access-Control-Expose-Headers
    repeated string exposed_headers = 6;
    // allow_credentials indicates whether the request can include user credentials like
    // cookies, HTTP authentication or client side SSL certificates.
    // return Access-Control-Allow-Credentials
    bool allow_credentials = 7;
    // options_passthrough instructs preflight to let other potential next handlers to
    // process the OPTIONS method. Turn this on if your application handles OPTIONS.
    bool options_passthrough = 8;
    // max_age indicates how long the results of a preflight request
    // can be cached
    google.protobuf.Duration max_age = 9;
    // debug flag adds additional output to debug server side CORS issues
    bool debug = 10;
  }

}
